[gd_scene format=3 uid="uid://da8opdlk3lpms"]

[ext_resource type="Script" uid="uid://rtb17mnd1osv" path="res://scripts/main_menu/main_menu_singleton.gd" id="1_hyk8p"]

[node name="Main" type="Node2D" unique_id=2039596441]

[node name="MainMenuSingleton" type="Node2D" parent="." unique_id=1832908159]
script = ExtResource("1_hyk8p")

[node name="CanvasLayer" type="CanvasLayer" parent="MainMenuSingleton" unique_id=1103783243]

[node name="LocalOrOnlineMenu" type="HBoxContainer" parent="MainMenuSingleton/CanvasLayer" unique_id=989858971]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="LocalPlayButton" type="Button" parent="MainMenuSingleton/CanvasLayer/LocalOrOnlineMenu" unique_id=482445219]
layout_mode = 2
text = "Local"

[node name="OnlinePlayButton" type="Button" parent="MainMenuSingleton/CanvasLayer/LocalOrOnlineMenu" unique_id=612336420]
layout_mode = 2
text = "Online"

[connection signal="pressed" from="MainMenuSingleton/CanvasLayer/LocalOrOnlineMenu/LocalPlayButton" to="MainMenuSingleton" method="_on_local_play_button_pressed"]
[connection signal="pressed" from="MainMenuSingleton/CanvasLayer/LocalOrOnlineMenu/OnlinePlayButton" to="MainMenuSingleton" method="_on_online_play_button_pressed"]
